fix alignment of post score

--- a/packages/app/components/PostItem.module.css
+++ b/packages/app/components/PostItem.module.css
@@ -203,6 +203,7 @@
 .postEsScorePara {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 
